fixed alignment

--- a/milestone6/style.css
+++ b/milestone6/style.css
@@ -399,6 +399,7 @@ footer{
     font-weight: 550;
     color: white;
     line-height: 1.35;
+    text-align: center;
 }
 
 .quote_block_2{
